# tichu

./: .gitignore  README.md  tichu-architecture.md
backend/: CLAUDE.md  main.py  pyproject.toml  requirements.txt
backend/ai/: client.py  player.py  prompts.py
backend/game/: combinations.py  constants.py  deck.py  engine.py  models.py  scoring.py  wish.py
backend/lobby/: manager.py  models.py
backend/tests/: conftest.py  test_combinations.py  test_deck.py  test_engine.py  test_models.py  test_scoring.py  test_wish.py
backend/ws/: broadcaster.py  handler.py  protocol.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/Card/: Card.tsx  CardStack.tsx
frontend/src/components/Game/: ActionBar.tsx  CardPush.tsx  GameBoard.tsx  GameLog.tsx  OpponentHand.tsx  PlayerHand.tsx  ScoreBoard.tsx  TrickArea.tsx  TurnIndicator.tsx  WishIndicator.tsx
frontend/src/components/Lobby/: CreateGame.tsx  JoinGame.tsx  WaitingRoom.tsx
frontend/src/contexts/: WebSocketContext.tsx
frontend/src/hooks/: useGameActions.ts  useWebSocket.ts
frontend/src/stores/: gameStore.ts
frontend/src/types/: game.ts  ws.ts
frontend/src/utils/: animationConfig.ts  cardUtils.ts  combinationUtils.ts
